--- a/CinemaTicketingSystemAPI/appsettings.json
+++ b/CinemaTicketingSystemAPI/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "CinemaClients"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Cinema.db"
+    "DefaultConnection": "Server=DESKTOP-EBQ9QQB;Database=CinemaDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
